# FinTrack

./: README.md
backend/: Cargo.toml  lib.rs
frontend/: index.css  index.html
frontend/src/: AddTransaction.jsx  AiAdvice.jsx  App.jsx  AuthContext.jsx  Modal.jsx  Navbar.jsx  ReportFinancial.jsx  main.jsx  utils.jsx
