[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-llm = "0.3.0"
ic-stable-structures = "0.6.8"
serde = "1.0.219"
serde_json = "1.0.141"
serde_bytes = "0.11.17"
